test/deca/syntax/valid/print.deca
{
    print("Hello");
    print(2);
    println("Hello");
    println(2);
}