test/deca/syntax/invalid/println_incomplet_1.deca
// Description:
//    test de programme incorrect syntaxiquement
//
// Resultats:
//    ligne 8 : Erreur (manque parenthèse fermante)

{
    println("Hello";
}